First draft changes to layout

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4007,6 +4007,13 @@ body {
     margin-bottom: 10px; }
   .contact .info .item .cont p {
     font-size: 13px; }
+  
+  .cont a {
+    color: #9f9f9f;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 2;
+    margin: 0; }
 
 .contact .map-box {
   padding: 0; }
